// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`axiosClientCredentialsMiddleware should merge scopes from different requests 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2 scope3 scope4",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should perform client credentials request on differing scope 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2 scope3",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should perform client credentials request on token timeout 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should perform client credentials request when forced 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should request and add access token to request header 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should use basic auth 1`] = `
Array [
  Array [
    Object {
      "auth": Object {
        "password": "clientSecret",
        "username": "clientId",
      },
      "data": Object {
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;

exports[`axiosClientCredentialsMiddleware should use existing bearer token by default 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "client_id": "clientId",
        "client_secret": "clientSecret",
        "grant_type": "client_credentials",
        "scope": "scope1 scope2",
      },
      "headers": Object {
        "x-client-environment": "clientEnvironment",
        "x-client-id": "clientId",
        "x-client-version": "clientVersion",
      },
      "method": "post",
      "timeout": 3000,
      "url": "https://oauth.lindorm.io:4000/oauth2/token",
    },
  ],
]
`;
